# openai-hackathon

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  raport.md
.streamlit/: config.toml
backend/: AGENT_ORCHESTRATION.md  PAYMENTS_TRUST.md  README.md
backend/src/agent_commerce/: __init__.py  environment.py  main.py
backend/src/agent_commerce_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py
backend/tests/contract/: test_agent_projection.py  test_mcp_tools.py  test_payment_contracts.py
backend/tests/integration/: test_agent_mcp_integration.py  test_commerce_api.py
backend/tests/unit/: test_agent_logging.py  test_commerce_service.py  test_orchestration_factory.py  test_orchestration_service.py  test_payment_service.py  test_seed_catalog.py  test_semantic_offer_matching.py  test_stripe_payment_adapter.py  test_transcription_service.py  test_trust_service.py
docs/: shared-contracts.md  solution-architecture.md  team-playbook.md  technology-stack.md  workstream-status.md
frontend/: README.md  __init__.py  api_client.py  app.py  demo_flow.py  index.html  package-lock.json  package.json  presentation.py  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: Icons.tsx  StripeCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  chatMessages.test.ts  chatMessages.ts  conversations.test.ts  conversations.ts  format.test.ts  format.ts  realtimeTranscription.test.ts  (+2 more)
frontend/tests/: test_api_client.py  test_demo_flow.py  test_presentation.py
(+43 files in other folders)
