[project]
name = "agent-commerce-gateway"
version = "0.1.0"
description = "Agent-first commerce transaction workflow"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "mcp>=1.12,<3",
    "openai-agents>=0.2,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "python-dotenv>=1.1,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2.5,<3",
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend/src"}

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_commerce"]
mypy_path = "backend/src"
